[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "leafscan"
version = "0.1.0"
description = "LeafScan application and tools"
authors = [
  { name = "Kevyn Angueira", email = "kevyn.angueira@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[tool.setuptools]
package-dir = {"" = "."}
packages = ["LeafScan"]